# icinga2-mcp

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
examples/: claude_desktop_config.json  claude_desktop_config_ssh.json  usage_examples.md
src/icinga2_mcp/: __init__.py  __main__.py  client.py  server.py  tunnel.py
